Cherry-pick b9508a969a49. rdar://problem/103539339

getClientRects returning wrong values on empty selection
    https://bugs.webkit.org/show_bug.cgi?id=148532
    <rdar://22634654>

    Reviewed by Antti Koivisto.

    * Source/WebCore/layout/integration/inline/InlineIteratorTextBox.cpp:
    (WebCore::InlineIterator::TextBox::selectionRect const):

    getClientRects should return only the rect at the caret position when selection is empty (or unitary range).
    In this PR we changed the way to evaluate if the caret is within the text box regarding its upper limit.
    If the caret position is equal the end of the text box, the caret should be considered in the range of the
    text box only for the last text box in the chain. This is because we allow the caret to move to a position after
    the last text box in the chain.

    For the non-caret case we keep calculating if range is within the text box as before.

    * Source/WebCore/layout/integration/inline/InlineIteratorTextBox.cpp:
    (WebCore::InlineIterator::TextBox::selectionRect const):
    * Source/WebCore/rendering/RenderText.cpp:
    (WebCore::localQuadForTextRun):

    We are now passing the real offset limits (start, end) of the range to TextBox::selectionRect so
    it can identify a caret case. This seems to be unnecessary since we are clamping the range limits in relation
    to the textbox inside selectionRect. Also, without that we can't differ between a caret case and a case in which the text box
    has just 1 position overlapping with.

    Canonical link: https://commits.webkit.org/253536@main

Canonical link: https://commits.webkit.org/252432.962@safari-7614-branch